--- a/app/globals.css
+++ b/app/globals.css
@@ -1059,7 +1059,7 @@ textarea:focus {
 }
 
 .pager .active.item {
-    color: var(--fore-color);
+    color: white;
     background-color: var(--primary-color);
 }
 
